--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <button class="number" onclick="show(')')">)</button>
     <button class="symbol" onclick="calc('=')">=</button>
 
+    <button class="number" onclick="show('cy')">cy</button>
+    <button class="number" onclick="show('61')">61</button>
+    <button class="number" onclick="show('cy61')">cy61</button>
+    <button class="symbol" onclick="calc('bravo')">bravo</button>
+    
 </div>
 <script src="script.js"></script>
 
